lookhere/deployment-back.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lookhere-backend-deployment
  labels:
    app: lookhere-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lookhere-backend
  template:
    metadata:
      labels:
        app: lookhere-backend
    spec:
      containers:
      - name: lookhere-backend
        image: vinimarco/lookhere:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lookhere-backend
  name: lookhere-backend-service
spec:
  type: NodePort
  selector:
    app: lookhere-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
