lookhere/deployment-db.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: mcr.microsoft.com/mssql/server:2017-latest
        resources:
          requests:
            memory: "1Gi"
            cpu: "1000m"
          limits:
            memory: "3Gi"
            cpu: "2000m"

        ports:
        - containerPort: 1433
        volumeMounts:
          - name: db-pvc
            mountPath: /var/lib/postgresql/data
       
      volumes:
        - name: db-pvc
          persistentVolumeClaim:
            claimName: db-pvc

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db-service
spec:
  type: NodePort
  selector:
    app: db
  ports:
    - port: 1433
      targetPort: 1433
      nodePort: 30032
