lookhere/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lookhere-frontend-deployment
  labels:
    app: lookhere-frontend # important 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lookhere-frontend
  template:
    metadata:
      labels:
        app: lookhere-frontend
    spec:
      containers:
      - name: lookhere-frontend
        image: briandwamba/nemesis:lookhere-frontend-000
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lookhere-frontend
  name: lookhere-frontend-service
spec:
  type: NodePort
  selector:
    app: lookhere-frontend  # this have to match with the service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
